# Fremvork_lipsink

./: .gitignore  CHANGELOG.md  README.md  cli.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: base.yaml  demo.yaml  synthetic_dataset_only.yaml
configs/loss/: default.yaml
configs/model/: lipsync_v2.yaml
configs/optimizer/: adamw.yaml  lion.yaml  momentum_sgd.yaml
docs/: README.md  cli-reference.md  configuration.md  getting-started.md
examples/: README.md  iris_example.py  lipsync_demo_example.py  mnist_example.py  pairs_batch.json  python_apply_batch.py  regression_example.py  train_infer_workflow.md
lipsync/: __init__.py  apply.py  composite.py  ops.py
lipsync/activations/: __init__.py  registry.py
lipsync/api/: app.py
lipsync/config/: __init__.py  schema.py
lipsync/evaluation/: __init__.py  metrics.py  reconstruction.py
lipsync/inference/: __init__.py  mux.py  static_clip.py
lipsync/losses/: __init__.py  classification.py  lipsync_losses.py  regression.py
lipsync/models/: __init__.py
lipsync/nn/: __init__.py  data_utils.py  sequential.py
lipsync/optimizers/: __init__.py  adam.py  clipping.py  lion.py  lookahead.py  schedulers.py  sgd.py
lipsync/plugins/: __init__.py  base.py  registry.py
lipsync/runtime/: __init__.py  compat.py
lipsync/training/: __init__.py  callbacks.py  checkpoint.py  trainer.py
scripts/: generate_synthetic_dataset.py  image_to_video.py  prepare_grid_dataset.py  run_lipsync_result.py  verify_dataset_reconstruction.py  wav2lip_infer.py  wav2lip_user_train_and_infer.py
tests/: test_composite.py  test_data_lipsync.py  test_factories.py  test_integration_smoke.py  test_mux.py  test_regression_guards.py  test_synthetic.py  test_train_infer_alignment.py
(+18 files in other folders)
